--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
 version: '3.8'
 services:
   frontend:
-    image: node:18
-    working_dir: /app
-    volumes:
-      - ./:/app
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "3003:3000"
-    command: sh -c "npm install && npm run build && npm start"
     environment:
       - NODE_ENV=production
     restart: unless-stopped
